alternative if picture doesn't show

--- a/app/views/creations/show.html.erb
+++ b/app/views/creations/show.html.erb
@@ -2,7 +2,9 @@
 <p><%= @creations.description %></p>
 <p><%= @creations.difficulte %></p>
 <% if @creations.avatar.attached? %>
-  <img src="<%= (url_for(@creations.avatar)) %>" alt="Orange" />
+  <img src="<%= (url_for(@creations.avatar)) %>"  />
+    <% else %>
+  <img src="https://images.unsplash.com/photo-1515372039744-b8f02a3ae446?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"  />
 <% end %>
 <%= link_to 'Retour', creations_path %>
 <% if user_signed_in? %>
