--- a/app/views/creations/index.html.erb
+++ b/app/views/creations/index.html.erb
@@ -37,6 +37,8 @@
               <div class="card-image">
                 <% if creation.avatar.attached? %>
                   <img src="<%= (url_for(creation.avatar)) %>" alt="Orange" />
+                    <% else %>
+                  <img src="https://images.unsplash.com/photo-1515372039744-b8f02a3ae446?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"  />
                 <% end %>
               </div>
             <div class="card-body p-3">
